import { Text, View } from 'react-native';

export default function Record() {
  return (
    <View style={{ flex: 1, alignItems: 'center', justifyContent: 'center' }}>
      <Text>Record</Text>
    </View>
  );
}
